kubernetes/apps/media/sabnzbd/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: sabnzbd.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external.krapulax.dev
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - sabnzbd.krapulax.dev
  rules:
    - backendRefs:
        - name: sabnzbd
          namespace: media
          port: 8080
